Kuberentes manifest task fixes (#11039)

--- a/Tasks/KubernetesManifestV0/Tests/manifests/deployment-image-substitution.yaml
+++ b/Tasks/KubernetesManifestV0/Tests/manifests/deployment-image-substitution.yaml
@@ -21,6 +21,12 @@ spec:
         - containerPort: 80
       - name: edgecase
         image: nginx-image:1.7.9
+      - name: untagged
+        image: mysql 
+      - name: untaggedonacr
+        image: myacr.azurecr.io/myimage 
+      - name: untaggedwithcomment
+        image: myimagewithcomment # this is a comment
       imagePullSecrets:
       - name: key1
       initContainers:
