--- a/Tasks/DotNetCoreCLIV2/package.json
+++ b/Tasks/DotNetCoreCLIV2/package.json
@@ -22,6 +22,7 @@
         "azure-pipelines-task-lib": "2.8.0",
         "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
         "q": "^1.4.1",
-        "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+        "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz",
+        "uuid": "3.2.1"
     }
 }
