--- a/Tasks/SshV0/package.json
+++ b/Tasks/SshV0/package.json
@@ -4,6 +4,6 @@
     "@types/q": "^1.0.7",
     "scp2": "0.5.0",
     "ssh2": "0.8.2",
-    "vsts-task-lib": "0.8.3"
+    "azure-pipelines-task-lib": "^2.9.3"
   }
 }
