--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -95,7 +95,7 @@ Tasks/CmdLineV2/*   @jtpetty
 
 Tasks/CocoaPodsV0/*     @leantk
 
-Tasks/Common/artifacts-common/*     @shubham90
+Tasks/Common/artifacts-common/*     @phil-hodgson
 
 Tasks/Common/AzureRmDeploy-common/*   @vincentdass  @SumiranAgg
 
@@ -183,7 +183,7 @@ Tasks/DownloadFileshareArtifactsV0/*    @Lovakumar      @omeshp
 
 Tasks/DownloadGitHubReleasesV0/*    @Lovakumar      @gykuma
 
-Tasks/DownloadPackageV0/*       @shubham90
+Tasks/DownloadPackageV0/*       @phil-hodgson
 
 Tasks/DownloadPipelineArtifactV0/*      @mihaif @jahsu-MSFT @fadnavistanmay @owenhuynMSFT @arunkm
 
@@ -253,7 +253,7 @@ Tasks/KubernetesManifestV0/*    @vithati
 
 Tasks/ManualInterventionV8/*    @vithati
 
-Tasks/MavenAuthenticateV0/*     @shubham90  @aasim
+Tasks/MavenAuthenticateV0/*     @phil-hodgson  @aasim
 
 Tasks/MavenV2/*     @leantk
 
@@ -267,19 +267,19 @@ Tasks/NodeToolV0/*      @damccorm
 
 Tasks/NpmV1/*      @phil-hodgson
 
-Tasks/NpmAuthenticateV0/*       @shubham90
+Tasks/NpmAuthenticateV0/*       @phil-hodgson
 
-Tasks/NuGetV0/*     @shubham90
+Tasks/NuGetV0/*     @phil-hodgson
 
-Tasks/NuGetCommandV2/*      @shubham90
+Tasks/NuGetCommandV2/*      @phil-hodgson
 
-Tasks/NuGetAuthenticateV0/*      @shubham90
+Tasks/NuGetAuthenticateV0/*      @phil-hodgson
 
-Tasks/NuGetPackagerV0/*     @shubham90
+Tasks/NuGetPackagerV0/*     @phil-hodgson
 
-Tasks/NuGetPublisherV0/*    @shubham90
+Tasks/NuGetPublisherV0/*    @phil-hodgson
 
-Tasks/NuGetToolInstallerV0/*    @shubham90
+Tasks/NuGetToolInstallerV0/*    @phil-hodgson
 
 Tasks/OpenPolicyAgentInstallerV0/*    @Anumita
 
@@ -287,9 +287,9 @@ Tasks/PackerBuildV0/*   @bishal-pdmsft
 
 Tasks/PackerBuildV1/*   @bishal-pdmsft
 
-Tasks/PipAuthenticateV0/*     @shubham90
+Tasks/PipAuthenticateV0/*     @phil-hodgson
 
-Tasks/PipAuthenticateV1/*     @shubham90
+Tasks/PipAuthenticateV1/*     @phil-hodgson
 
 Tasks/PowerShellV2/*    @jtpetty
 
@@ -351,11 +351,11 @@ Tasks/SqlServerDacpacDeployment/*   @kmkumaran
 
 Tasks/SshV0/*   @zachariahcox
 
-Tasks/TwineAuthenticateV0/*     @shubham90
+Tasks/TwineAuthenticateV0/*     @phil-hodgson
 
-Tasks/TwineAuthenticateV1/*     @shubham90
+Tasks/TwineAuthenticateV1/*     @phil-hodgson
 
-Tasks/UniversalPackagesV0/*     @shubham90
+Tasks/UniversalPackagesV0/*     @phil-hodgson
 
 Tasks/UseDotNetV2/*     @bishal-pdmsft
 
