--- a/issue-rules.yml
+++ b/issue-rules.yml
@@ -19,7 +19,16 @@ rules:
   contains: 'Npm'
   addLabels: ['Area: Artifacts']  
 - valueFor: '**Enter Task Name**'
+  contains: 'NpmAuthenticate'
+  addLabels: ['Area: Artifacts']
+- valueFor: '**Enter Task Name**'
   contains: 'UniversalPackage'
+  addLabels: ['Area: Artifacts']
+- valueFor: '**Enter Task Name**'
+  contains: 'NuGetCommand'
+  addLabels: ['Area: Artifacts']
+- valueFor: '**Enter Task Name**'
+  contains: 'NuGetToolInstaller'
   addLabels: ['Area: Artifacts']
 # Area: Build
 - valueFor: '**Enter Task Name**'
