--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,12 @@ trigger:
 - master
 - releases/*
 
+resources:
+  repositories:
+  - repository: AzureDevops
+    type: github
+    name: mseng/AzureDevops
+
 jobs:
 
 # All tasks on Windows
