--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -84,6 +84,9 @@ steps:
       $releaseBranch = "test/releases/m" + $currentSprint
 
       # Push branch to git
+      Add-Content "$HOME\.git-credentials" "https://$(GitHubPAT):x-oauth-basic@github.com"
+      git config --global user.email "damccorm@microsoft.com"
+      git config --global user.name "damccorm"
       git checkout -b $releaseBranch
       git push origin $releaseBranch
     condition: and(succeeded(), in(variables['build.reason'], 'Schedule', 'Manual'), eq(variables['courtesyPush'], 'true'))
