--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -81,7 +81,7 @@ steps:
       $difference = New-TimeSpan -Start $startdate -End $enddate
       $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
       $currentSprint = $sprintsSince165 + 165
-      $releaseBranch = "test/releases/m" + $currentSprint
+      $releaseBranch = "damccormtest/releases/m" + $currentSprint
 
       # Push branch to git
       git checkout -b $releaseBranch
