--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -1,3 +1,9 @@
+resources:
+- repository: AzureDevOps
+  type: github
+  endpoint: AzureDevOps
+  name: AzureDevOps/AzureDevOps
+
 steps:
 
 # Clean
