--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -21,3 +21,16 @@ steps:
     cd IndividualNugetPackagesDownloaded\IndividualNugetPackagesDownloaded
     push.cmd
   displayName: 'Push Nuget packages'
+
+- powershell: |
+      # Build the release branch name
+      $startdate = Get-Date -Date '2020-01-20'
+      $enddate = Get-Date
+      $difference = New-TimeSpan -Start $startdate -End $enddate
+      $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
+      $currentSprint = $sprintsSince165 + 165
+      $releaseBranch = "users/damccorm/m" + $currentSprint + "/courtesyPush"
+
+      # Push branch to git
+      git checkout -b $releaseBranch
+      git push origin $releaseBranch
