--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -6,6 +6,7 @@ steps:
 
 - task: ExtractFiles@1
   inputs:
+    archiveFilesPattern: 'IndividualNugetPackagesDownloaded/*.zip'
     destinationFolder: IndividualNugetPackagesDownloaded
     cleanDestinationFolder: true 
   displayName: 'Extract artifact'
