--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -1,7 +1,7 @@
 steps:
 - task: DownloadBuildArtifacts@0
   inputs:
-    artifactName: package
+    artifactName: IndividualNugetPackages
   displayName: 'Download Artifact'
 
 - task: ExtractFiles@1
