--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -4,7 +4,7 @@ steps:
     artifactName: IndividualNugetPackages
   displayName: 'Download Artifact'
 
-- bash: ls -R $(System.ArtifactsDirectory)
+- script: dir /s $(System.ArtifactsDirectory)
 
 - task: ExtractFiles@1
   inputs:
