--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -10,9 +10,13 @@ steps:
 - script: node azure-pipelines-tasks\ci\courtesy-push.js AzureDevOps\.nuget\externals\UnifiedDependencies.xml IndividualNugetPackagesDownloaded\IndividualNugetPackages\unified_deps.xml
   displayName: 'Update unified deps'
 
-- script: |
+- powershell: |
     cd AzureDevOps
     archive\Preinstall\StrongNameHijack.msi
+  displayName: 'Preinstall strongnamehijack'
+
+- script: |
+    cd AzureDevOps
     init.cmd
     cd IndividualNugetPackagesDownloaded\IndividualNugetPackages
     push.cmd
