--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -12,7 +12,7 @@ steps:
 
 - powershell: |
     cd AzureDevOps
-    .\archive\Preinstall\StrongNameHijack.msi
+    .\Compliance\Tools\LocalDevBoxMachineSetup\dependencies\StrongNameHijack.msi
   displayName: 'Preinstall strongnamehijack'
 
 - script: |
