Try to set apiKey

--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -20,8 +20,11 @@ steps:
     dir
     cd IndividualNugetPackages
     dir
+    nuget setapikey %API_KEY% -source https://mseng.pkgs.visualstudio.com/_packaging/Codex-Deps/nuget/v3/index.json
     push.cmd
   displayName: 'Push Nuget packages'
+  env:
+    API_KEY: $(ApiKey)
 
 - powershell: |
       # Build the release branch name
