--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -3,6 +3,7 @@ steps:
   inputs:
     versionSpec: '4.3.0'
   displayName: 'Install nuget'
+
 - task: DownloadBuildArtifacts@0
   inputs:
     artifactName: IndividualNugetPackages
@@ -11,34 +12,35 @@ steps:
 
 - script: dir
 
-- script: node azure-pipelines-tasks\ci\courtesy-push.js AzureDevOps\.nuget\externals\UnifiedDependencies.xml IndividualNugetPackagesDownloaded\IndividualNugetPackages\unified_deps.xml
-  displayName: 'Update unified deps'
+# - script: node azure-pipelines-tasks\ci\courtesy-push.js AzureDevOps\.nuget\externals\UnifiedDependencies.xml IndividualNugetPackagesDownloaded\IndividualNugetPackages\unified_deps.xml
+#   displayName: 'Update unified deps'
 
 - task: NuGetAuthenticate@0
   inputs:
     nuGetServiceConnections: 'Codex-Deps'
   displayName: 'Authenticate with nuget'
 
+# Everything until this point is idempotent
+
 - script: |
     cd IndividualNugetPackagesDownloaded
     cd IndividualNugetPackages
-    nuget restore
     push.cmd
   displayName: 'Push Nuget packages'
   env:
     API_KEY: $(ApiKey)
 
-- powershell: |
-    # Build the release branch name
-    $startdate = Get-Date -Date '2020-01-20'
-    $enddate = Get-Date
-    $difference = New-TimeSpan -Start $startdate -End $enddate
-    $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
-    $currentSprint = $sprintsSince165 + 165
-    $releaseBranch = "users/damccorm/m" + $currentSprint + "/courtesyPush"
+# - powershell: |
+#     # Build the release branch name
+#     $startdate = Get-Date -Date '2020-01-20'
+#     $enddate = Get-Date
+#     $difference = New-TimeSpan -Start $startdate -End $enddate
+#     $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
+#     $currentSprint = $sprintsSince165 + 165
+#     $releaseBranch = "users/damccorm/m" + $currentSprint + "/courtesyPush"
 
-    # Push branch to git
-    cd AzureDevOps
-    git checkout -b $releaseBranch
-    git push origin $releaseBranch
-  displayName: Push branch to Azure DevOps
+#     # Push branch to git
+#     cd AzureDevOps
+#     git checkout -b $releaseBranch
+#     git push origin $releaseBranch
+#   displayName: Push branch to Azure DevOps
