--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
   displayName: Publish
   dependsOn: 
   - build_all_windows
-  condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'))
+  condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), eq(variables.os, 'Windows_NT'))
   pool:
     vmImage: vs2017-win2016
   steps:
@@ -42,9 +42,9 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
-  # - checkout: AzureDevOps
-  #   fetchDepth: 1
-  # - checkout: self
+  - checkout: AzureDevOps
+    fetchDepth: 1
+  - checkout: self
   - template: ci/courtesy-push.yml
 
 # All tasks on Linux
