--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,7 @@ jobs:
   steps:
   - checkout: AzureDevOps
     fetchDepth: 1
+    persistCredentials: true
   - checkout: self
   - template: ci/courtesy-push.yml
 
