Skip already existing packages

--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -23,11 +23,11 @@ steps:
 # Everything until this point is idempotent (other than pushing tasks release branch which will get overwritten if we re-do this anyways).
 # Note: Pushing the tasks release branch has to happen in the first job in case commits are pushed between now and then.
 
-# - script: |
-#     cd IndividualNugetPackagesDownloaded
-#     cd IndividualNugetPackages
-#     push.cmd
-#   displayName: 'Push Nuget packages'
+- script: |
+    cd IndividualNugetPackagesDownloaded
+    cd IndividualNugetPackages
+    push.cmd
+  displayName: 'Push Nuget packages'
 
 - powershell: |
     # Build the release branch name
@@ -39,6 +39,7 @@ steps:
     $releaseBranch = "users/damccorm/test/m" + $currentSprint + "/courtesyPush"
 
     # Push branch to git
+    Write-Host "Pushing branch to AzureDevOps"
     cd AzureDevOps
     git checkout -b $releaseBranch
     git config --global user.email "damccorm@microsoft.com"
@@ -47,9 +48,10 @@ steps:
     git commit -m "Courtesy bump of tasks"
     git push origin $releaseBranch
 
+    Write-Host "Creating Pull Request"
     cd ..\azure-pipelines-tasks\ci\courtesy-push
     npm install
     node open-courtesy-push-pull-request.js $releaseBranch
-  displayName: Push branch to Azure DevOps
+  displayName: Create PR in Azure DevOps
   env:
     TOKEN: $(Package.Token)
