--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -75,12 +75,8 @@ steps:
 
   - powershell: |
       # Build the release branch name
-      $startdate = Get-Date -Date '2020-01-20'
-      $enddate = Get-Date
-      $difference = New-TimeSpan -Start $startdate -End $enddate
-      $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
-      $currentSprint = $sprintsSince165 + 165
-      $releaseBranch = "damccormtest/releases/m" + $currentSprint
+      $currentSprint = (Invoke-WebRequest https://whatsprintis.it/sprint -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).sprint
+      $releaseBranch = "releases/m" + $currentSprint
       # Push branch to git
       git checkout -b $releaseBranch
       git push https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
