--- a/ci/courtesy-push.yml
+++ b/ci/courtesy-push.yml
@@ -31,12 +31,8 @@ steps:
 
 - powershell: |
     # Build the release branch name
-    $startdate = Get-Date -Date '2020-01-20'
-    $enddate = Get-Date
-    $difference = New-TimeSpan -Start $startdate -End $enddate
-    $sprintsSince165 = ($difference.Days/21) - (($difference.Days/21)%1) # Weirdly, PowerShell modulo is actually a remainder operator. This gets the actual modulo value.
-    $currentSprint = $sprintsSince165 + 165
-    $releaseBranch = "users/damccorm/test/m" + $currentSprint + "/courtesyPush"
+    $currentSprint = (Invoke-WebRequest https://whatsprintis.it/sprint -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).sprint
+    $releaseBranch = "users/damccorm/m" + $currentSprint + "/courtesyPush"
     # Push branch to git
     Write-Host "Pushing branch to AzureDevOps"
     cd AzureDevOps
