--- a/Tasks/GulpV1/package.json
+++ b/Tasks/GulpV1/package.json
@@ -12,7 +12,8 @@
   },
   "homepage": "https://github.com/microsoft/vsts-tasks#readme",
   "dependencies": {
-    "vsts-task-lib": "^0.7.4",
+    "azure-pipelines-task-lib": "^2.9.3",
+    "minimatch": "^3.0.4",
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7"
   }
