--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 
 ci/*  @damccorm   @stephenmichaelf  @jtpetty
 
-Tasks/ACRTaskV0/*    @vithati    @Anumita
+Tasks/ACRTaskV0/*    @ammohant    @Anumita
 
 Tasks/AndroidSigningV2/*    @leantk
 
@@ -37,25 +37,25 @@ Tasks/AzureFunctionAppV1/*    @kmkumaran      @SumiranAgg
 
 Tasks/AzureFunctionAppContainerV1/*    @kmkumaran      @SumiranAgg
 
-Tasks/AzureFunctionOnKubernetesV0/*     @vithati    @ajinkya599  
+Tasks/AzureFunctionOnKubernetesV0/*     @ammohant    @ajinkya599  
 
-Tasks/AzureFunctionV1/*     @vithati
+Tasks/AzureFunctionV1/*     @ammohant
 
 Tasks/AzureIoTEdgeV2/*      @prativen  @blackchoey  @michaeljqzq
 
-Tasks/AzureKeyVaultV1/*     @vithati
+Tasks/AzureKeyVaultV1/*     @prativen
 
 Tasks/AzureMonitorAlertsV0/*    @kmkumaran
 
-Tasks/AzureMonitorV0/*      @vithati
+Tasks/AzureMonitorV0/*      @ammohant
 
-Tasks/AzureMonitorV1/*      @vithati
+Tasks/AzureMonitorV1/*      @ammohant
 
 Tasks/AzureMysqlDeploymentV1/*  @kmkumaran      @RoshanKumarMicrosoft
 
 Tasks/AzureNLBManagementV1/*    @kmkumaran
 
-Tasks/AzurePolicyV0/*   @vithati
+Tasks/AzurePolicyV0/*   @ammohant
 
 Tasks/AzurePowerShellV2/*   @kmkumaran
 
@@ -127,7 +127,7 @@ Tasks/Common/codecoverage-tools/*     @nigurr   @lkillgore
 
 Tasks/Common/coveragepublisher/*     @karanjitsingh   @acesiddhu
 
-Tasks/Common/docker-common/*      @jikuma   @vithati
+Tasks/Common/docker-common/*      @jikuma   @ammohant
 
 Tasks/Common/ios-signing-common/*     @leantk   @hashtagchris
 
@@ -147,7 +147,7 @@ Tasks/CondaEnvironmentV0/*      @leantk
 
 Tasks/CondaEnvironmentV1/*      @leantk
 
-Tasks/ContainerBuildV0/*    @vithati @prebansa
+Tasks/ContainerBuildV0/*    @ammohant @prebansa
 
 Tasks/CopyFilesV2/*     @jtpetty
 
@@ -157,19 +157,19 @@ Tasks/CUrlUploaderV2/*      @zachariahcox
 
 Tasks/DecryptFileV1/*   @zachariahcox
 
-Tasks/DelayV1/*     @vithati
+Tasks/DelayV1/*     @ammohant
 
 Tasks/DeleteFilesV1/*   @jtpetty
 
 Tasks/DeployVisualStudioTestAgentV2/*    @SadagopanRajaram @ShreyasRmsft
 
-Tasks/DockerV0/*    @vithati
+Tasks/DockerV0/*    @ammohant
 
-Tasks/DockerV1/*    @vithati
+Tasks/DockerV1/*    @ammohant
 
-Tasks/DockerV2/*    @vithati
+Tasks/DockerV2/*    @ammohant
 
-Tasks/DockerComposeV0/*     @vithati
+Tasks/DockerComposeV0/*     @ammohant
 
 Tasks/DotNetCoreCLIV2/*     @bishal-pdmsft
 
@@ -191,7 +191,7 @@ Tasks/DownloadPipelineArtifactV1/*      @mihaif @jahsu-MSFT @fadnavistanmay @owe
 
 Tasks/DownloadSecureFileV1/*    @leantk
 
-Tasks/DuffleInstallerV0/*   @vithati     @vithati
+Tasks/DuffleInstallerV0/*   @ammohant     @ammohant
 
 Tasks/ExtractFilesV1/*      @jtpetty
 
@@ -199,7 +199,7 @@ Tasks/FileTransformV1/*     @kmkumaran      @SumiranAgg     @vincentdass
 
 Tasks/FtpUploadV1/*     @zachariahcox
 
-Tasks/FuncToolsInstallerV0/*     @vithati   @ajinkya599
+Tasks/FuncToolsInstallerV0/*     @ammohant   @ajinkya599
 
 Tasks/GithubCommentV0/*     @ds-ms
 
@@ -217,11 +217,11 @@ Tasks/GulpV0/*      @hross
 
 Tasks/GulpV1/*      @hross
 
-Tasks/HelmDeployV0/*    @vithati
+Tasks/HelmDeployV0/*    @ammohant
 
-Tasks/HelmInstallerV0/*     @vithati
+Tasks/HelmInstallerV0/*     @ammohant
 
-Tasks/HelmInstallerV1/*     @vithati
+Tasks/HelmInstallerV1/*     @ammohant
 
 Tasks/IISWebAppDeployment/*     @kmkumaran
 
@@ -235,7 +235,7 @@ Tasks/InstallAppleProvisioningProfileV1/*   @leantk
 
 Tasks/InstallSSHKeyV0/*     @zachariahcox
 
-Tasks/InvokeRestApiV1/*     @vithati
+Tasks/InvokeRestApiV1/*     @ammohant
 
 Tasks/JavaToolInstallerV0/*     @leantk
 
@@ -243,15 +243,15 @@ Tasks/JenkinsDownloadArtifactsV1/*      @Lovakumar      @kasubram
 
 Tasks/JenkinsQueueJobV2/*   @leantk
 
-Tasks/KubectlInstallerV0/*  @vithati
+Tasks/KubectlInstallerV0/*  @ammohant
 
-Tasks/KubernetesV0/*    @vithati
+Tasks/KubernetesV0/*    @ammohant
 
-Tasks/KubernetesV1/*    @vithati
+Tasks/KubernetesV1/*    @ammohant
 
-Tasks/KubernetesManifestV0/*    @vithati
+Tasks/KubernetesManifestV0/*    @ammohant
 
-Tasks/ManualInterventionV8/*    @vithati
+Tasks/ManualInterventionV8/*    @ammohant
 
 Tasks/MavenAuthenticateV0/*     @phil-hodgson    @aasim    @satbai
 
@@ -307,7 +307,7 @@ Tasks/PublishCodeCoverageResultsV2/*    @karanjitsingh @acesiddhu
 
 Tasks/PublishPipelineArtifactV0/*       @mihaif @jahsu-MSFT @fadnavistanmay @owenhuynMSFT @arunkm
 
-Tasks/PublishPipelineMetadataV0/*    @vithati @nidabas
+Tasks/PublishPipelineMetadataV0/*    @ammohant @nidabas
 
 Tasks/PublishSymbolsV2/*    @arunkm @mihaif @jahsu-MSFT @fadnavistanmay @owenhuynMSFT
 
@@ -317,13 +317,13 @@ Tasks/PublishTestResultsV2/*    @shailesh-sk
 
 Tasks/ContainerStructureTestV0/*    @shailesh-sk   @navin22
 
-Tasks/PublishToAzureServiceBusV1/*      @vithati
+Tasks/PublishToAzureServiceBusV1/*      @ammohant
 
 Tasks/PyPIPublisherV0/*     @bishal-pdmsft   @leantk
 
 Tasks/PythonScriptV0/*      @leantk
 
-Tasks/QueryWorkItemsV0/*    @vithati
+Tasks/QueryWorkItemsV0/*    @ammohant
 
 Tasks/QuickPerfTestV1/*     @SadagopanRajaram @ShreyasRmsft
 
