--- a/ci/publish-steps.yml
+++ b/ci/publish-steps.yml
@@ -39,7 +39,7 @@ steps:
 - script: npm run package
   displayName: npm run package
   env:
-    courtesyPush: $(courtesyPush)
+    COURTESY_PUSH: $(courtesyPush)
 
 # Publish per task NuGet package artifact
 - task: PublishBuildArtifacts@1
