--- a/ci/publish-steps.yml
+++ b/ci/publish-steps.yml
@@ -38,6 +38,8 @@ steps:
 # Stage per task NuGet package
 - script: npm run package
   displayName: npm run package
+  env:
+    COURTESY_PUSH: $(courtesyPush)
 
 # Publish per task NuGet package artifact
 - task: PublishBuildArtifacts@1
