Verify min agent demands.

--- a/ci/build-single-steps.yml
+++ b/ci/build-single-steps.yml
@@ -19,6 +19,10 @@ steps:
 - script: npm install
   displayName: npm install
 
+# Verify min agent version demands
+- script: npm run verifyMinAgentDemands
+  displayName: Verify all min agent demands are valid
+
 # Build
 - script: node make.js build --task "$(task)"
   displayName: Build
