Make sure min agent demands dont demand unreleased agent (#12461)
* Verify min agent demands.

* Fix.

* min agent demands without breaking build

Co-authored-by: Stephen Franceschelli <stephenmichaelf@gmail.com>

--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -35,6 +35,14 @@ steps:
     PACKAGE_ENDPOINT: $(Package.Endpoint)
     PACKAGE_TOKEN: $(Package.Token)
 
+# Verify min agent version demands
+- script: |
+    cd ci
+    cd verifyMinAgentDemands
+    npm install
+    node index.js
+  displayName: Verify all min agent demands are valid
+
 # Build
 - script: node make.js build --task "$(task_pattern)"
   displayName: Build
