--- a/Tasks/JenkinsQueueJobV2/package.json
+++ b/Tasks/JenkinsQueueJobV2/package.json
@@ -5,7 +5,7 @@
     "@types/q": "^1.0.7",
     "@types/shelljs": "^0.3.0",
     "request": "^2.65.0",
-    "vsts-task-lib": "0.9.20"
+    "azure-pipelines-task-lib": "2.9.3"
   },
   "description": "Azure Pipelines Jenkins Queue Job Task",
   "repository": {
