--- a/Tasks/PyPIPublisherV0/package.json
+++ b/Tasks/PyPIPublisherV0/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
-    "vsts-task-lib": "2.1.0"
+    "azure-pipelines-task-lib": "2.9.3"
   }
 }
