--- a/Tasks/PythonScriptV0/package.json
+++ b/Tasks/PythonScriptV0/package.json
@@ -20,6 +20,6 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
     "@types/uuid": "^3.4.3",
-    "vsts-task-lib": "^2.4.0"
+    "azure-pipelines-task-lib": "^2.9.3"
   }
 }
