--- a/Tasks/XamarinTestCloudV1/package.json
+++ b/Tasks/XamarinTestCloudV1/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.9.3"
+    "azure-pipelines-task-lib": "^2.9.3",
+    "minimatch": "^3.0.4"
   }
 }
