updating the task owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,23 +19,23 @@ Tasks/AppCenterTestV1/*   @owenniblock
 
 Tasks/ArchiveFilesV2/*  @jtpetty
 
-Tasks/AzureAppServiceManageV0/*     @kmkumaran      @SumiranAgg     @vincentdass
+Tasks/AzureAppServiceManageV0/*     @Vijay-train  @SumiranAgg @chshrikh
 
-Tasks/AzureAppServiceSettingsV1/*     @eaarora-ms      @SumiranAgg     @vincentdass     @niadak
+Tasks/AzureAppServiceSettingsV1/*     @Vijay-train @chshrikh  @eaarora-ms @SumiranAgg
 
 Tasks/AzureCLIV1/*      @bishal-pdmsft
 
-Tasks/AzureCloudPowerShellDeploymentV1/*    @kmkumaran
+Tasks/AzureCloudPowerShellDeploymentV1/*    @Vijay-train  @chshrikh
 
-Tasks/AzureFileCopyV1/*    @kmkumaran
+Tasks/AzureFileCopyV1/*    @Vijay-train   @chshrikh
 
-Tasks/AzureFileCopyV2/*    @kmkumaran
+Tasks/AzureFileCopyV2/*    @Vijay-train   @chshrikh
 
-Tasks/AzureFileCopyV3/*    @kmkumaran
+Tasks/AzureFileCopyV3/*    @Vijay-train   @chshrikh
 
-Tasks/AzureFunctionAppV1/*    @kmkumaran      @SumiranAgg
+Tasks/AzureFunctionAppV1/*    @Vijay-train    @chshrikh   @SumiranAgg
 
-Tasks/AzureFunctionAppContainerV1/*    @kmkumaran      @SumiranAgg
+Tasks/AzureFunctionAppContainerV1/*    @Vijay-train    @chshrikh      @SumiranAgg
 
 Tasks/AzureFunctionOnKubernetesV0/*     @ammohant    @ajinkya599  
 
@@ -45,35 +45,35 @@ Tasks/AzureIoTEdgeV2/*      @prativen  @blackchoey  @michaeljqzq
 
 Tasks/AzureKeyVaultV1/*     @prativen
 
-Tasks/AzureMonitorAlertsV0/*    @kmkumaran
+Tasks/AzureMonitorAlertsV0/*    @Vijay-train    @chshrikh
 
 Tasks/AzureMonitorV0/*      @ammohant
 
 Tasks/AzureMonitorV1/*      @ammohant
 
-Tasks/AzureMysqlDeploymentV1/*  @kmkumaran      @RoshanKumarMicrosoft
+Tasks/AzureMysqlDeploymentV1/*  @Vijay-train    @chshrikh      @RoshanKumarMicrosoft
 
-Tasks/AzureNLBManagementV1/*    @kmkumaran
+Tasks/AzureNLBManagementV1/*    @Vijay-train    @chshrikh
 
 Tasks/AzurePolicyV0/*   @ammohant
 
-Tasks/AzurePowerShellV2/*   @kmkumaran
+Tasks/AzurePowerShellV2/*   @Vijay-train    @chshrikh
 
-Tasks/AzurePowerShellV3/*   @kmkumaran
+Tasks/AzurePowerShellV3/*   @Vijay-train    @chshrikh
 
-Tasks/AzurePowershellV4/*   @kmkumaran
+Tasks/AzurePowershellV4/*   @Vijay-train    @chshrikh
 
 Tasks/AzureResourceGroupDeploymentV2/*      @bishal-pdmsft
 
 Tasks/AzureResourceManagerTemplateDeploymentV3/*      @bishal-pdmsft    @vinodkumar3
 
-Tasks/AzureRmWebAppDeploymentV3/*   @kmkumaran    @SumiranAgg     @vincentdass
+Tasks/AzureRmWebAppDeploymentV3/*   @Vijay-train    @chshrikh    @SumiranAgg
 
-Tasks/AzureRmWebAppDeploymentV4/*   @kmkumaran    @SumiranAgg     @vincentdass
+Tasks/AzureRmWebAppDeploymentV4/*   @Vijay-train    @chshrikh    @SumiranAgg
 
-Tasks/AzureWebAppV1/*   @kmkumaran    @SumiranAgg     @vincentdass
+Tasks/AzureWebAppV1/*  @Vijay-train    @chshrikh    @SumiranAgg
 
-Tasks/AzureWebAppContainerV1/*   @kmkumaran    @SumiranAgg     @vincentdass
+Tasks/AzureWebAppContainerV1/*   @Vijay-train    @chshrikh    @SumiranAgg
 
 Tasks/AzureVmssDeploymentV0/*       @bishal-pdmsft
 
@@ -85,9 +85,9 @@ Tasks/CacheBetaV0/*      @johnterickson
 
 Tasks/CacheBetaV1/*      @johnterickson
 
-Tasks/ChefV1/*      @kmkumaran
+Tasks/ChefV1/*      @Vijay-train    @chshrikh
 
-Tasks/ChefKnifeV1/*     @kmkumaran
+Tasks/ChefKnifeV1/*     @Vijay-train    @chshrikh
 
 Tasks/CMakeV1/*  @daveken
 
@@ -115,9 +115,9 @@ Tasks/Common/VstsAzureHelpers_/*  @rajatagrawal-dev   @vincentdass
 
 Tasks/Common/VstsAzureRestHelpers_/*  @Ajay-MS  @rajatagrawal-dev
 
-Tasks/Common/azure-arm-rest/*   @vincentdass    @Ajay-MS    @bishal-pdmsft
+Tasks/Common/azure-arm-rest/*   @Ajay-MS    @bishal-pdmsft
 
-Tasks/Common/azure-arm-rest-v2/*    @kmkumaran      @SumiranAgg     @vincentdass    @bishal-pdmsft
+Tasks/Common/azure-arm-rest-v2/*   @Vijay-train    @chshrikh   @SumiranAgg  @bishal-pdmsft
 
 Tasks/Common/azure-blobstorage-artifactProvider/*   @omeshp   @hiyadav    @bishal-pdmsft
 
@@ -195,7 +195,7 @@ Tasks/DuffleInstallerV0/*   @ammohant     @ammohant
 
 Tasks/ExtractFilesV1/*      @jtpetty
 
-Tasks/FileTransformV1/*     @kmkumaran      @SumiranAgg     @vincentdass
+Tasks/FileTransformV1/*     @Vijay-train    @chshrikh   @SumiranAgg
 
 Tasks/FtpUploadV1/*     @zachariahcox
 
@@ -223,11 +223,11 @@ Tasks/HelmInstallerV0/*     @ammohant
 
 Tasks/HelmInstallerV1/*     @ammohant
 
-Tasks/IISWebAppDeployment/*     @kmkumaran
+Tasks/IISWebAppDeployment/*     @Vijay-train    @chshrikh
 
-Tasks/IISWebAppDeploymentOnMachineGroupV0/*     @kmkumaran
+Tasks/IISWebAppDeploymentOnMachineGroupV0/*     @Vijay-train    @chshrikh
 
-Tasks/IISWebAppManagementOnMachineGroupV0/*     @kmkumaran
+Tasks/IISWebAppManagementOnMachineGroupV0/*     @Vijay-train    @chshrikh
 
 Tasks/InstallAppleCertificateV2/*   @leantk
 
@@ -261,7 +261,7 @@ Tasks/MavenV3/*     @leantk
 
 Tasks/MSBuildV1/*   @daveken
 
-Tasks/MysqlDeploymentOnMachineGroupV1/*     @kmkumaran      @RoshanKumarMicrosoft
+Tasks/MysqlDeploymentOnMachineGroupV1/*     @Vijay-train    @chshrikh      @RoshanKumarMicrosoft
 
 Tasks/NodeToolV0/*      @damccorm
 
@@ -293,11 +293,11 @@ Tasks/PipAuthenticateV1/*     @phil-hodgson    @aasim    @satbai
 
 Tasks/PowerShellV2/*    @jtpetty
 
-Tasks/PowerShellOnTargetMachinesV1/*    @kmkumaran
+Tasks/PowerShellOnTargetMachinesV1/*    @Vijay-train    @chshrikh
 
-Tasks/PowerShellOnTargetMachinesV2/*    @kmkumaran
+Tasks/PowerShellOnTargetMachinesV2/*    @Vijay-train    @chshrikh
 
-Tasks/PowerShellOnTargetMachinesV3/*    @kmkumaran
+Tasks/PowerShellOnTargetMachinesV3/*    @Vijay-train    @chshrikh
 
 Tasks/PublishBuildArtifactsV1/*     @leantk
 
@@ -343,11 +343,9 @@ Tasks/ServiceFabricPowerShellV1/*   @bishal-pdmsft
 
 Tasks/ServiceFabricUpdateManifestsV2/*  @bishal-pdmsft
 
-Tasks/SqlAzureDacpacDeploymentV1/*      @kmkumaran
+Tasks/SqlDacpacDeploymentOnMachineGroupV0/*     @Vijay-train    @chshrikh
 
-Tasks/SqlDacpacDeploymentOnMachineGroupV0/*     @kmkumaran
-
-Tasks/SqlServerDacpacDeployment/*   @kmkumaran
+Tasks/SqlServerDacpacDeployment/*   @Vijay-train    @chshrikh
 
 Tasks/SshV0/*   @zachariahcox
 
@@ -373,9 +371,9 @@ Tasks/VsTestV2/*    @SadagopanRajaram @ShreyasRmsft
 
 Tasks/VsTestPlatformToolInstallerV1/*   @SadagopanRajaram @ShreyasRmsft
 
-Tasks/WindowsMachineFileCopyV1/*    @kmkumaran
+Tasks/WindowsMachineFileCopyV1/*    @Vijay-train    @chshrikh
 
-Tasks/WindowsMachineFileCopyV2/*    @kmkumaran
+Tasks/WindowsMachineFileCopyV2/*    @Vijay-train    @chshrikh
 
 Tasks/XamarinAndroidV1/*    @leantk
 
