--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -88,5 +88,5 @@ steps:
       # Push branch to git
       git checkout -b $releaseBranch
       git push https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
-    condition: and(succeeded(), in(variables['build.reason'], 'Schedule', 'Manual'), eq(variables['courtesyPush'], 'true'))
+    condition: and(succeeded(), in(variables['build.reason'], 'Schedule', 'Manual'), eq(variables['COURTESY_PUSH'], 'true'))
     displayName: Push release branch 
