--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -15,6 +15,8 @@ steps:
     displayName: Start collect diagnostics
     condition: and(succeeded(), eq(variables.collect_diagnostics, 'true'))
 
+  - powershell: [Environment]::Version
+
 # Use node 8, npm 5
 - task: NodeTool@0
   displayName: Use node 8
